<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <artifactId>postgres-service</artifactId>
  <description>Object Store PostgresSql service</description>
  <groupId>object.store</groupId>
  <modelVersion>4.0.0</modelVersion>
  <name>postgres-service</name>
  <parent>
    <artifactId>spring-boot-starter-parent</artifactId>
    <groupId>org.springframework.boot</groupId>
    <relativePath/>
    <version>2.6.7</version> <!-- lookup parent from repository -->
  </parent>
  <properties>
    <alanda-lib.version>1.0.12</alanda-lib.version>
    <java.version>17</java.version>
  </properties>

  <version>0.0.1-SNAPSHOT</version>
  <build>
    <plugins>
      <plugin>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <groupId>org.springframework.boot</groupId>
      </plugin>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <annotationProcessorPaths>
            <path>
              <artifactId>mapstruct-processor</artifactId>
              <groupId>org.mapstruct</groupId>
              <version>1.4.2.Final</version>
            </path>
          </annotationProcessorPaths>
          <source>17</source>
          <target>17</target>
          <compilerArgs>--enable-preview</compilerArgs>
        </configuration>
        <groupId>org.apache.maven.plugins</groupId>
        <version>3.8.1</version>
      </plugin>
      <plugin>
        <artifactId>openapi-generator-maven-plugin</artifactId>
        <executions>
          <execution>
            <configuration>
              <apiPackage>object.store.gen.dbservice.apis</apiPackage>
              <configOptions>
                <interfaceOnly>true</interfaceOnly>
                <java8>true</java8>
                <reactive>true</reactive>
              </configOptions>
              <generatorName>spring</generatorName>
              <inputSpec>
                ./database-service.yaml
              </inputSpec>
              <modelPackage>object.store.gen.dbservice.models</modelPackage>
            </configuration>
            <goals>
              <goal>generate</goal>
            </goals>
            <id>postgresdb-service</id>
          </execution>
          <execution>
            <configuration>
              <apiPackage>object.store.gen.objects.apis</apiPackage>
              <configOptions>
                <interfaceOnly>true</interfaceOnly>
                <java8>true</java8>
                <reactive>true</reactive>
                <useTags>true</useTags>
              </configOptions>
              <generatorName>spring</generatorName>
              <inputSpec>./objects.yaml</inputSpec>
              <modelPackage>object.store.gen.objects.models</modelPackage>
            </configuration>
            <goals>
              <goal>generate</goal>
            </goals>
            <id>objects</id>
          </execution>
        </executions>
        <groupId>org.openapitools</groupId>
        <version>5.4.0</version>
      </plugin>
    </plugins>
  </build>
  <dependencies>
    <dependency>
      <artifactId>spring-boot-starter-data-r2dbc</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>controllers-rest-lib</artifactId>
      <groupId>io.alanda.libs</groupId>
      <version>${alanda-lib.version}</version>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-webflux</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>mapstruct</artifactId>
      <groupId>org.mapstruct</groupId>
      <version>1.4.2.Final</version>
    </dependency>
    <dependency>
      <artifactId>r2dbc-postgresql</artifactId>
      <groupId>io.r2dbc</groupId>
      <version>0.8.11.RELEASE</version>
    </dependency>
    <dependency>
      <artifactId>everit-json-schema</artifactId>
      <groupId>com.github.erosb</groupId>
      <version>1.14.0</version>
    </dependency>
    <dependency>
      <artifactId>postgresql</artifactId>
      <groupId>org.postgresql</groupId>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-test</artifactId>
      <groupId>org.springframework.boot</groupId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <artifactId>reactor-test</artifactId>
      <groupId>io.projectreactor</groupId>
      <scope>test</scope>
    </dependency>
  </dependencies>
</project>
